syntax = "proto3";
package DomainServices.CodebookService.v1;
option csharp_namespace = "DomainServices.CodebookService.Contracts.v1";

import "google/protobuf/wrappers.proto";

message GetACVAndBagmanRealEstateTypeRequest {
	int32 RealEstateTypeId = 1;
	int32 RealEstateSubtypeId = 2;
	google.protobuf.Int32Value RealEstateStateId = 3;
}

message GetACVAndBagmanRealEstateTypeResponse {
	string AcvRealEstateTypeId = 1;
}
